# simple_instagram_api

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  user_blueprint.py  user_dataclass.py  user_schema.py  utils.py
app/: main.py  user_schema.py  utils.py
