[project]
name = "simple-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Luan Delino",email = "luan.peres@blips.com.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-smorest (>=0.45.0,<0.46.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
